WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
27667
REGRESSION (
r46298
): Exception after clicking on Bookmarks button in the Bookmarks Bar
https://bugs.webkit.org/show_bug.cgi?id=27667
Summary
REGRESSION (r46298): Exception after clicking on Bookmarks button in the Book...
sdudla_uk
Reported
2009-07-24 14:51:16 PDT
After installing the latest nightly build I lost the ability to open the Bookmarks folder in the Bookmarks Bar. I was able to open the Favourite sites folder but some of my bookmarks are used too infrequently to be included there. Instead of opening when the Bookmarks icon is clicked Safari tries to go back to a previous page but does so very slowly.
Attachments
Add attachment
proposed patch, testcase, etc.
Mark Rowe (bdash)
Comment 1
2009-07-24 17:04:01 PDT
This broke with <
http://trac.webkit.org/changeset/46298
>. The console shows: -[WebHTMLView pageTitle]: unrecognized selector sent to instance 0x1017a04a0 *** WebKit discarded an uncaught exception in the webView:decidePolicyForMIMEType:request:frame:decisionListener: delegate: <NSInvalidArgumentException> -[WebHTMLView pageTitle]: unrecognized selector sent to instance 0x1017a04a0
Darin Adler
Comment 2
2009-07-24 17:56:24 PDT
http://trac.webkit.org/changeset/46384
Mark Rowe (bdash)
Comment 3
2009-07-25 12:16:03 PDT
***
Bug 27678
has been marked as a duplicate of this bug. ***
Mark Rowe (bdash)
Comment 4
2009-07-27 13:23:49 PDT
***
Bug 27728
has been marked as a duplicate of this bug. ***
Mark Rowe (bdash)
Comment 5
2009-07-27 13:23:59 PDT
***
Bug 27710
has been marked as a duplicate of this bug. ***
Mark Rowe (bdash)
Comment 6
2009-07-27 13:24:11 PDT
***
Bug 27692
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug