2009-07-24  Darin Adler  <darin@apple.com>

Reviewed by Mark Rowe.

        REGRESSION (r46298): Exception after clicking on Bookmarks button in the Bookmarks Bar
        https://bugs.webkit.org/show_bug.cgi?id=27667

        * WebCoreSupport/WebFrameLoaderClient.mm:
        (WebFrameLoaderClient::transitionToCommittedForNewPage): Moved the code to set the
        title here. This is late enough that both the view and representation exist.

        * WebView/WebDataSource.mm:
        (-[WebDataSource _makeRepresentation]): Removed the code to set the title from here.
        It's a bit too early.



Canonical link: https://commits.webkit.org/37994@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46384 268f45cc-cd09-0410-ab3c-d52691b4dbfc